--- a/_posts/2019-02-24-devops-aks-0.md
+++ b/_posts/2019-02-24-devops-aks-0.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Setup DevOps on AKS (Azure Kubernetes Service) - Prerequisites
+redirect_from:
+  - /devops-aks-0/
 ---
 
 * Prerequisites
