--- a/_posts/2019-02-24-devops-aks-1.md
+++ b/_posts/2019-02-24-devops-aks-1.md
@@ -2,6 +2,8 @@
 layout: post
 title: Setup CI on Azure Kubernetes Service (AKS) with Azure DevOps, Docker Compose
   and Helm
+redirect_from:
+  - /devops-aks-1/
 ---
 
 * [Prerequisites](/2019/02/24/devops-aks-0)
