--- a/_posts/2019-05-01-az-203-1.md
+++ b/_posts/2019-05-01-az-203-1.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 'AZ-203: Developing Solutions for Microsoft Azure - Resources'
+redirect_from:
+  - /az-203-1/
 ---
 
 * AZ-203: Developing Solutions for Microsoft Azure - Resources
