--- a/_posts/2019-05-02-az-203-2.md
+++ b/_posts/2019-05-02-az-203-2.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 'AZ-203: Developing Solutions for Microsoft Azure – What I learned'
+redirect_from:
+  - /az-203-2/
 ---
 
 * [AZ-203: Developing Solutions for Microsoft Azure - Resources](/2019/05/01/az-203-1)
