--- a/_posts/2019-05-27-az-300.md
+++ b/_posts/2019-05-27-az-300.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 'AZ-300: Microsoft Azure Architect Technologies'
+redirect_from:
+  - /az-300/
 ---
 
 * AZ-300: Microsoft Azure Architect Technologies
