--- a/_posts/2019-08-01-az-301.md
+++ b/_posts/2019-08-01-az-301.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 'AZ-301: Microsoft Azure Architect Design'
+redirect_from:
+  - /az-301/
 ---
 
 * [AZ-300: Microsoft Azure Architect Technologies](/2019/05/27/az-300/)
