--- a/_posts/2020-06-20-az-400.md
+++ b/_posts/2020-06-20-az-400.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 'AZ-400: Designing and Implementing Microsoft DevOps Solutions'
+redirect_from:
+  - /az-400/
 ---
 
 ## Why DevOps?
