--- a/_posts/2019-02-25-devops-aks-3.md
+++ b/_posts/2019-02-25-devops-aks-3.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Setup DevOps on AKS (Azure Kubernetes Service) - What I learned
+redirect_from:
+  - /devops-aks-3/
 ---
 
 * [Prerequisites](/2019/02/24/devops-aks-0)
